@@ -3,66 +3,76 @@ package uk.gov.hmcts.reform.pcs.ccd.service;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Captor;
+import org.mockito.InOrder;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.modelmapper.ModelMapper;
-import org.springframework.beans.factory.annotation.Autowired;
 import uk.gov.hmcts.ccd.sdk.type.AddressUK;
+import uk.gov.hmcts.reform.pcs.ccd.type.DynamicStringList;
+import uk.gov.hmcts.reform.pcs.ccd.type.DynamicStringListElement;
 import uk.gov.hmcts.ccd.sdk.type.ListValue;
-import uk.gov.hmcts.reform.idam.client.models.UserInfo;
+import uk.gov.hmcts.reform.pcs.ccd.domain.ClaimantType;
 import uk.gov.hmcts.reform.pcs.ccd.domain.DefendantDetails;
 import uk.gov.hmcts.reform.pcs.ccd.domain.PCSCase;
-import uk.gov.hmcts.reform.pcs.ccd.domain.PaymentStatus;
 import uk.gov.hmcts.reform.pcs.ccd.domain.VerticalYesNo;
 import uk.gov.hmcts.reform.pcs.ccd.entity.AddressEntity;
-import uk.gov.hmcts.reform.pcs.ccd.entity.PartyEntity;
 import uk.gov.hmcts.reform.pcs.ccd.entity.PcsCaseEntity;
 import uk.gov.hmcts.reform.pcs.ccd.model.Defendant;
 import uk.gov.hmcts.reform.pcs.ccd.repository.PcsCaseRepository;
 import uk.gov.hmcts.reform.pcs.config.MapperConfig;
 import uk.gov.hmcts.reform.pcs.exception.CaseNotFoundException;
 import uk.gov.hmcts.reform.pcs.postcodecourt.model.LegislativeCountry;
-import uk.gov.hmcts.reform.pcs.security.SecurityContextService;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.UUID;
+import java.util.stream.Stream;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.catchThrowable;
-import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.inOrder;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.when;
+import static org.junit.jupiter.params.provider.Arguments.arguments;
 
 @ExtendWith(MockitoExtension.class)
 class PcsCaseServiceTest {
 
     private static final long CASE_REFERENCE = 1234L;
 
-    @Autowired
     private ModelMapper modelMapper;
-
     @Mock
     private PcsCaseRepository pcsCaseRepository;
     @Mock
-    private SecurityContextService securityContextService;
+    private PcsCaseMergeService pcsCaseMergeService;
+    @Mock
+    private TenancyLicenceService tenancyLicenceService;
     @Captor
     private ArgumentCaptor<PcsCaseEntity> pcsCaseEntityCaptor;
 
+    @Mock
+    private PartyDocumentsService partyDocumentsService;
+
     private PcsCaseService underTest;
-    private TenancyLicenceService tenancyLicenceService;
 
     @BeforeEach
     void setUp() {
         MapperConfig config = new MapperConfig();
         modelMapper = spy(config.modelMapper());
         tenancyLicenceService = mock(TenancyLicenceService.class);
-        underTest = new PcsCaseService(pcsCaseRepository, securityContextService, modelMapper, tenancyLicenceService);
+        underTest = new PcsCaseService(
+            pcsCaseRepository,
+            pcsCaseMergeService,
+            modelMapper,
+            tenancyLicenceService,
+            partyDocumentsService
+        );
     }
 
     @Test
@@ -126,6 +136,36 @@ class PcsCaseServiceTest {
     }
 
     @Test
+    void shouldPatchCaseEntityAndSave() {
+        // Given
+        PCSCase pcsCase = mock(PCSCase.class);
+        PcsCaseEntity pcsCaseEntity = mock(PcsCaseEntity.class);
+        when(pcsCaseRepository.findByCaseReference(CASE_REFERENCE)).thenReturn(Optional.of(pcsCaseEntity));
+
+        // When
+        underTest.patchCase(CASE_REFERENCE, pcsCase);
+
+        // Then
+        InOrder inOrder = inOrder(pcsCaseRepository, pcsCaseMergeService);
+        inOrder.verify(pcsCaseRepository).findByCaseReference(CASE_REFERENCE);
+        inOrder.verify(pcsCaseMergeService).mergeCaseData(pcsCaseEntity, pcsCase);
+        inOrder.verify(pcsCaseRepository).save(pcsCaseEntity);
+    }
+
+    @Test
+    void shouldMergeCaseData() {
+        // Given
+        PCSCase pcsCase = mock(PCSCase.class);
+        PcsCaseEntity pcsCaseEntity = mock(PcsCaseEntity.class);
+
+        // When
+        underTest.mergeCaseData(pcsCaseEntity, pcsCase);
+
+        // Then
+        verify(pcsCaseMergeService).mergeCaseData(pcsCaseEntity, pcsCase);
+    }
+
+    @Test
     void shouldThrowExceptionPatchingUnknownCaseReference() {
         // Given
         PCSCase pcsCase = mock(PCSCase.class);
@@ -141,181 +181,43 @@ class PcsCaseServiceTest {
     }
 
     @Test
-    void shouldLeaveFieldsUnchangedWhenPatchingCaseWithNoData() {
+    void shouldLoadCaseFromRepository() {
         // Given
-        PCSCase pcsCase = mock(PCSCase.class);
-        PcsCaseEntity existingPcsCaseEntity = mock(PcsCaseEntity.class);
-
-        when(pcsCaseRepository.findByCaseReference(CASE_REFERENCE)).thenReturn(Optional.of(existingPcsCaseEntity));
-        when(pcsCase.getCaseManagementLocation()).thenReturn(null);
+        PcsCaseEntity expectedPcsCaseEntity = mock(PcsCaseEntity.class);
+        when(pcsCaseRepository.findByCaseReference(CASE_REFERENCE)).thenReturn(Optional.of(expectedPcsCaseEntity));
 
         // When
-        underTest.patchCase(CASE_REFERENCE, pcsCase);
+        PcsCaseEntity actualPcsCaseEntity = underTest.loadCase(CASE_REFERENCE);
 
         // Then
-        verify(pcsCaseRepository).save(pcsCaseEntityCaptor.capture());
-
-        PcsCaseEntity savedEntity = pcsCaseEntityCaptor.getValue();
-        assertThat(savedEntity).isSameAs(existingPcsCaseEntity);
-        verify(existingPcsCaseEntity).setTenancyLicence(any());
-        verify(existingPcsCaseEntity).setPossessionGrounds(any());
-        verifyNoMoreInteractions(existingPcsCaseEntity);
+        verify(pcsCaseRepository).findByCaseReference(CASE_REFERENCE);
+        assertThat(actualPcsCaseEntity).isSameAs(expectedPcsCaseEntity);
     }
 
     @Test
-    void shouldChangeFieldsWhenPatchingCase() {
+    void shouldThrowExceptionLoadingUnknownCaseReference() {
         // Given
-        PCSCase pcsCase = mock(PCSCase.class);
-
-        AddressUK updatedPropertyAddress = mock(AddressUK.class);
-        final AddressEntity updatedAddressEntity = stubAddressUKModelMapper(updatedPropertyAddress);
-
-        PcsCaseEntity existingPcsCaseEntity = mock(PcsCaseEntity.class);
-        when(pcsCase.getPropertyAddress()).thenReturn(updatedPropertyAddress);
-
-        when(pcsCaseRepository.findByCaseReference(CASE_REFERENCE)).thenReturn(Optional.of(existingPcsCaseEntity));
+        when(pcsCaseRepository.findByCaseReference(CASE_REFERENCE)).thenReturn(Optional.empty());
 
         // When
-        underTest.patchCase(CASE_REFERENCE, pcsCase);
+        Throwable throwable = catchThrowable(() -> underTest.loadCase(CASE_REFERENCE));
 
         // Then
-        verify(pcsCaseRepository).save(pcsCaseEntityCaptor.capture());
-
-        PcsCaseEntity savedEntity = pcsCaseEntityCaptor.getValue();
-        assertThat(savedEntity).isSameAs(existingPcsCaseEntity);
-        verify(existingPcsCaseEntity).setPropertyAddress(updatedAddressEntity);
+        assertThat(throwable)
+            .isInstanceOf(CaseNotFoundException.class)
+            .hasMessage("No case found with reference %s", CASE_REFERENCE);
     }
 
     @Test
-    void shouldCreatePartyWithPcqIdForCurrentUser() {
-        UUID userId = UUID.randomUUID();
-        UUID expectedPcqId = UUID.randomUUID();
-        String expectedForename = "some forename";
-        String expectedSurname = "some surname";
-
-        PCSCase pcsCase = mock(PCSCase.class);
-        when(pcsCase.getUserPcqId()).thenReturn(expectedPcqId.toString());
-
-        UserInfo userDetails = mock(UserInfo.class);
-        when(userDetails.getUid()).thenReturn(userId.toString());
-        when(userDetails.getGivenName()).thenReturn(expectedForename);
-        when(userDetails.getFamilyName()).thenReturn(expectedSurname);
-        when(securityContextService.getCurrentUserDetails()).thenReturn(userDetails);
-
-        PcsCaseEntity existingPcsCaseEntity = new PcsCaseEntity();
-
-        when(pcsCaseRepository.findByCaseReference(CASE_REFERENCE)).thenReturn(Optional.of(existingPcsCaseEntity));
-
-        // When
-        underTest.patchCase(CASE_REFERENCE, pcsCase);
-
-        // Then
-        verify(pcsCaseRepository).save(pcsCaseEntityCaptor.capture());
-        PcsCaseEntity savedEntity = pcsCaseEntityCaptor.getValue();
-        assertThat(savedEntity.getParties())
-            .hasSize(1)
-            .allSatisfy(party -> {
-                assertThat(party.getIdamId()).isEqualTo(userId);
-                assertThat(party.getPcqId()).isEqualTo(expectedPcqId);
-                assertThat(party.getForename()).isEqualTo(expectedForename);
-                assertThat(party.getSurname()).isEqualTo(expectedSurname);
-            });
-
-    }
-
-    @Test
-    void shouldUpdateExistingPartyWithPcqIdForCurrentUser() {
-        final UUID userId = UUID.randomUUID();
-        final UUID expectedPcqId = UUID.randomUUID();
-        final UUID existingPartyId = UUID.randomUUID();
-
-        PCSCase pcsCase = mock(PCSCase.class);
-        when(pcsCase.getUserPcqId()).thenReturn(expectedPcqId.toString());
-
-        UserInfo userDetails = mock(UserInfo.class);
-        when(userDetails.getUid()).thenReturn(userId.toString());
-        when(securityContextService.getCurrentUserDetails()).thenReturn(userDetails);
-
-        PcsCaseEntity existingPcsCaseEntity = new PcsCaseEntity();
-        PartyEntity existingPartyEntity = new PartyEntity();
-        existingPartyEntity.setId(existingPartyId);
-        existingPartyEntity.setIdamId(userId);
-        existingPcsCaseEntity.addParty(existingPartyEntity);
-
-        when(pcsCaseRepository.findByCaseReference(CASE_REFERENCE)).thenReturn(Optional.of(existingPcsCaseEntity));
-
-        // When
-        underTest.patchCase(CASE_REFERENCE, pcsCase);
-
-        // Then
-        verify(pcsCaseRepository).save(pcsCaseEntityCaptor.capture());
-        PcsCaseEntity savedEntity = pcsCaseEntityCaptor.getValue();
-        assertThat(savedEntity.getParties())
-            .hasSize(1)
-            .allSatisfy(
-                party -> {
-                    assertThat(party.getId()).isEqualTo(existingPartyId);
-                    assertThat(party.getPcqId()).isEqualTo(expectedPcqId);
-                }
-            );
-
-    }
-
-    @Test
-    void shouldUpdatePaymentStatusWhenNotNull() {
+    void shouldSaveCaseToRepository() {
         // Given
-        PCSCase pcsCase = mock(PCSCase.class);
-        PcsCaseEntity existingPcsCaseEntity = mock(PcsCaseEntity.class);
-        PaymentStatus paymentStatus = PaymentStatus.PAID;
-
-        when(pcsCase.getPaymentStatus()).thenReturn(paymentStatus);
-        when(pcsCaseRepository.findByCaseReference(CASE_REFERENCE)).thenReturn(Optional.of(existingPcsCaseEntity));
+        PcsCaseEntity pcsCaseEntity = mock(PcsCaseEntity.class);
 
         // When
-        underTest.patchCase(CASE_REFERENCE, pcsCase);
+        underTest.save(pcsCaseEntity);
 
         // Then
-        verify(pcsCaseRepository).save(pcsCaseEntityCaptor.capture());
-        verify(existingPcsCaseEntity).setPaymentStatus(paymentStatus);
-        assertThat(pcsCaseEntityCaptor.getValue()).isSameAs(existingPcsCaseEntity);
-    }
-
-    @Test
-    void shouldUpdateCaseManagementLocationWhenNotNull() {
-        // Given
-        PCSCase pcsCase = mock(PCSCase.class);
-        PcsCaseEntity existingPcsCaseEntity = mock(PcsCaseEntity.class);
-        Integer location = 13685;
-
-        when(pcsCase.getCaseManagementLocation()).thenReturn(location);
-        when(pcsCaseRepository.findByCaseReference(CASE_REFERENCE)).thenReturn(Optional.of(existingPcsCaseEntity));
-
-        // When
-        underTest.patchCase(CASE_REFERENCE, pcsCase);
-
-        // Then
-        verify(pcsCaseRepository).save(pcsCaseEntityCaptor.capture());
-        verify(existingPcsCaseEntity).setCaseManagementLocation(location);
-        assertThat(pcsCaseEntityCaptor.getValue()).isSameAs(existingPcsCaseEntity);
-    }
-
-    @Test
-    void shouldUpdatePreActionProtocolCompletedWhenNotNull() {
-        // Given
-        PCSCase pcsCase = mock(PCSCase.class);
-        PcsCaseEntity existingPcsCaseEntity = mock(PcsCaseEntity.class);
-        VerticalYesNo preActionProtocolCompleted = VerticalYesNo.YES;
-
-        when(pcsCase.getPreActionProtocolCompleted()).thenReturn(preActionProtocolCompleted);
-        when(pcsCaseRepository.findByCaseReference(CASE_REFERENCE)).thenReturn(Optional.of(existingPcsCaseEntity));
-
-        // When
-        underTest.patchCase(CASE_REFERENCE, pcsCase);
-
-        // Then
-        verify(pcsCaseRepository).save(pcsCaseEntityCaptor.capture());
-        verify(existingPcsCaseEntity).setPreActionProtocolCompleted(preActionProtocolCompleted.toBoolean());
-        assertThat(pcsCaseEntityCaptor.getValue()).isSameAs(existingPcsCaseEntity);
+        verify(pcsCaseRepository).save(pcsCaseEntity);
     }
 
     @Test
@@ -325,7 +227,7 @@ class PcsCaseServiceTest {
             .addressLine1("125 Broadway")
             .postCode("W5 8DG")
             .build();
-        DefendantDetails details =  DefendantDetails.builder()
+        DefendantDetails details = DefendantDetails.builder()
             .nameKnown(VerticalYesNo.YES)
             .firstName("John")
             .lastName("Doe")
@@ -342,7 +244,7 @@ class PcsCaseServiceTest {
 
         // Then
         assertThat(result).hasSize(1);
-        Defendant mappedDefendant = result.get(0);
+        Defendant mappedDefendant = result.getFirst();
 
         assertThat(mappedDefendant.getId()).isEqualTo("123");
         assertThat(mappedDefendant.getNameKnown()).isTrue();
@@ -373,7 +275,7 @@ class PcsCaseServiceTest {
         List<ListValue<DefendantDetails>> result = underTest.mapToDefendantDetails(List.of(defendant));
 
         // Then
-        ListValue<DefendantDetails> listValue = result.get(0);
+        ListValue<DefendantDetails> listValue = result.getFirst();
         DefendantDetails mappedDefendantDetails = listValue.getValue();
 
         assertThat(result).hasSize(1);
@@ -412,7 +314,7 @@ class PcsCaseServiceTest {
         underTest.clearHiddenDefendantDetailsFields(defendantsList);
 
         // Then
-        DefendantDetails clearedDefendant = defendantsList.get(0).getValue();
+        DefendantDetails clearedDefendant = defendantsList.getFirst().getValue();
         assertThat(clearedDefendant.getFirstName()).isNull();
         assertThat(clearedDefendant.getLastName()).isNull();
         assertThat(clearedDefendant.getCorrespondenceAddress()).isNull();
@@ -425,4 +327,112 @@ class PcsCaseServiceTest {
         when(modelMapper.map(addressUK, AddressEntity.class)).thenReturn(addressEntity);
         return addressEntity;
     }
+
+    @Test
+    void shouldPersistClaimantTypeWhenCreatingCase() {
+        // Given
+        PCSCase pcsCase = mock(PCSCase.class);
+        AddressUK propertyAddress = mock(AddressUK.class);
+        final AddressEntity propertyAddressEntity = stubAddressUKModelMapper(propertyAddress);
+        
+        DynamicStringList claimantTypeList = DynamicStringList.builder()
+            .value(DynamicStringListElement.builder()
+                .code(ClaimantType.PRIVATE_LANDLORD.name())
+                .label(ClaimantType.PRIVATE_LANDLORD.getLabel())
+                .build())
+            .build();
+
+        when(pcsCase.getPropertyAddress()).thenReturn(propertyAddress);
+        when(pcsCase.getClaimantType()).thenReturn(claimantTypeList);
+
+        // When
+        underTest.createCase(CASE_REFERENCE, pcsCase);
+
+        // Then
+        verify(pcsCaseRepository).save(pcsCaseEntityCaptor.capture());
+
+        PcsCaseEntity savedEntity = pcsCaseEntityCaptor.getValue();
+        assertThat(savedEntity.getClaimantType()).isEqualTo(ClaimantType.PRIVATE_LANDLORD);
+    }
+
+    @Test
+    void shouldSkipClaimantTypeWhenNull() {
+        // Given
+        PCSCase pcsCase = mock(PCSCase.class);
+        AddressUK propertyAddress = mock(AddressUK.class);
+        final AddressEntity propertyAddressEntity = stubAddressUKModelMapper(propertyAddress);
+
+        when(pcsCase.getPropertyAddress()).thenReturn(propertyAddress);
+        when(pcsCase.getClaimantType()).thenReturn(null);
+
+        // When
+        underTest.createCase(CASE_REFERENCE, pcsCase);
+
+        // Then
+        verify(pcsCaseRepository).save(pcsCaseEntityCaptor.capture());
+
+        PcsCaseEntity savedEntity = pcsCaseEntityCaptor.getValue();
+        assertThat(savedEntity.getClaimantType()).isNull();
+    }
+
+    @Test
+    void shouldSkipClaimantTypeWhenValueCodeIsNull() {
+        // Given
+        PCSCase pcsCase = mock(PCSCase.class);
+        AddressUK propertyAddress = mock(AddressUK.class);
+        final AddressEntity propertyAddressEntity = stubAddressUKModelMapper(propertyAddress);
+        
+        DynamicStringList claimantTypeList = mock(DynamicStringList.class);
+        when(claimantTypeList.getValueCode()).thenReturn(null);
+        when(pcsCase.getPropertyAddress()).thenReturn(propertyAddress);
+        when(pcsCase.getClaimantType()).thenReturn(claimantTypeList);
+
+        // When
+        underTest.createCase(CASE_REFERENCE, pcsCase);
+
+        // Then
+        verify(pcsCaseRepository).save(pcsCaseEntityCaptor.capture());
+
+        PcsCaseEntity savedEntity = pcsCaseEntityCaptor.getValue();
+        assertThat(savedEntity.getClaimantType()).isNull();
+    }
+
+    @ParameterizedTest
+    @MethodSource("claimantTypeScenarios")
+    void shouldPersistAllClaimantTypes(ClaimantType claimantType) {
+        // Given
+        PCSCase pcsCase = mock(PCSCase.class);
+        AddressUK propertyAddress = mock(AddressUK.class);
+        final AddressEntity propertyAddressEntity = stubAddressUKModelMapper(propertyAddress);
+        
+        DynamicStringList claimantTypeList = DynamicStringList.builder()
+            .value(DynamicStringListElement.builder()
+                .code(claimantType.name())
+                .label(claimantType.getLabel())
+                .build())
+            .build();
+
+        when(pcsCase.getPropertyAddress()).thenReturn(propertyAddress);
+        when(pcsCase.getClaimantType()).thenReturn(claimantTypeList);
+
+        // When
+        underTest.createCase(CASE_REFERENCE, pcsCase);
+
+        // Then
+        verify(pcsCaseRepository).save(pcsCaseEntityCaptor.capture());
+
+        PcsCaseEntity savedEntity = pcsCaseEntityCaptor.getValue();
+        assertThat(savedEntity.getClaimantType()).isEqualTo(claimantType);
+    }
+
+    private static Stream<Arguments> claimantTypeScenarios() {
+        return Stream.of(
+            arguments(ClaimantType.PRIVATE_LANDLORD),
+            arguments(ClaimantType.PROVIDER_OF_SOCIAL_HOUSING),
+            arguments(ClaimantType.COMMUNITY_LANDLORD),
+            arguments(ClaimantType.MORTGAGE_LENDER),
+            arguments(ClaimantType.OTHER)
+        );
+    }
+
 }
